...
                app:errorTextColor="@color/anger"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector">

                <AutoCompleteTextView
                    android:id="@+id/new_event_emotional_state_autocomplete"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark"
                    android:dropDownWidth="347dp"
                    android:dropDownHeight="200dp"
...
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector"
                tools:ignore="KeyboardInaccessibleWidget">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_event_date_text"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:textColor="@color/light"
                    android:clickable="true"
...
                        android:fontFamily="@font/source_sans_pro_semibold"
                        android:inputType="none"
                        android:textColor="@color/light" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/my_location_button"
                    style="@style/Widget.Material3.Button.IconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:layout_marginLeft="16dp"
                    app:icon="@drawable/ic_my_location_40dp"
...
                app:errorTextColor="@color/anger"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_event_trigger_text"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/source_sans_pro_semibold"
                    android:maxLength="200"
                    android:inputType="textMultiLine"
...
                app:errorTextColor="@color/anger"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextColor="@color/light_dark_selector">

                <AutoCompleteTextView
                    android:id="@+id/new_event_social_situation_autocomplete"
                    style="@style/TextAppearance.CompileOrCry.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark"
                    android:dropDownWidth="347dp"
                    android:dropDownHeight="200dp"
...
                    android:text="@string/back"
                    android:textColor="@color/light"
                    app:strokeColor="@color/light" />

                <!-- Create Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_button"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/light"
                    android:text="@string/create"
...
