<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_menu_24dp"
        android:color="@color/light"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_new"
        android:icon="@drawable/ic_add_24dp"
        android:color="@color/light"
        android:title="@string/title_new" />

    <item
        android:id="@+id/navigation_profile"
...
