...
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutFeed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Spinner
            android:id="@+id/feed_spinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="18dp"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dialog" />

...
        android:src="@drawable/ic_baseline_search_24dp"
        app:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/light" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMap"
        style="@style/Widget.Material3.FloatingActionButton.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/dark"
...
